# python-camera-manager-directshow

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
DirectShow_Wrapper/: __init__.py
DirectShow_Wrapper/GUI/: __init__.py
DirectShow_Wrapper/app/: main.py
DirectShow_Wrapper/camera/: camera_device_bridge.py  camera_inspector_bridge.py  camera_manager.py
GUI/: main_GUI.py
app/: main.py
camera/: __init__.py  camera_device_bridge.py  camera_manager.py
